-- =====================================================================
-- Project Part III - Quote-to-Policy Workflow Extension
-- Target: PostgreSQL 16
--
-- Supports the assignment requirement for a workflow-based application
-- that lets a customer obtain an insurance quote and then a policy.
--
-- DESIGN DECISION: no separate POLICY table.
-- The Part II CONTRACT table already models an issued policy: it has
-- ContractNumber, AccountID, LineOfBusiness, PlanName, Status,
-- EffectiveDate, and EndDate, and it owns CONTRACT_BENEFIT and
-- CONTRACT_PREMIUM. An issued policy is therefore a CONTRACT row created
-- by converting an accepted quote. Adding a parallel POLICY table would
-- duplicate the contract hierarchy and split the premium history.
--
-- Six tables are added. Each one holds information that does not exist
-- anywhere in the Part II model: pre-sale quote state.
-- =====================================================================

\echo 'Creating Part III workflow extension...'

-- ---------------------------------------------------------------------
-- QUOTE - the quote header.
-- A quote is a pre-contract offer. It may never become a contract, so it
-- cannot be stored as a CONTRACT row with a draft status: that would put
-- non-policies into the policy table and corrupt every contract count.
-- ---------------------------------------------------------------------
CREATE TABLE IF NOT EXISTS QUOTE (
    QuoteID          BIGINT       GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    QuoteNumber      VARCHAR(50)  NOT NULL,
    CustomerID       INTEGER      NOT NULL REFERENCES CUSTOMER (CustomerID),
    AccountID        INTEGER      REFERENCES ACCOUNT (AccountID),
    AssociateID      INTEGER      REFERENCES ASSOCIATE (AssociateID),
    ProductLine      VARCHAR(20)  NOT NULL,
    QuoteStatus      VARCHAR(20)  NOT NULL DEFAULT 'Draft',
    RequestedDate    DATE         NOT NULL,
    EffectiveDate    DATE,
    ExpirationDate   DATE,
    EstimatedPremium NUMERIC(14,2),
    CreatedAt        TIMESTAMPTZ  NOT NULL DEFAULT now(),
    UpdatedAt        TIMESTAMPTZ  NOT NULL DEFAULT now(),
    CONSTRAINT uq_quote_number UNIQUE (QuoteNumber),
    -- Closed set of workflow states. Enforced in the database so an
    -- application bug cannot introduce an unknown state.
    CONSTRAINT ck_quote_status CHECK (QuoteStatus IN
        ('Draft','Submitted','Rated','Presented','Accepted','Rejected','Expired','Converted')),
    CONSTRAINT ck_quote_dates
        CHECK (ExpirationDate IS NULL OR EffectiveDate IS NULL OR EffectiveDate <= ExpirationDate),
    CONSTRAINT ck_quote_premium CHECK (EstimatedPremium IS NULL OR EstimatedPremium >= 0)
);
COMMENT ON TABLE QUOTE IS
    'Pre-contract insurance quote. Converts into a CONTRACT row when accepted.';

-- ---------------------------------------------------------------------
-- QUOTE_COVERAGE - the coverage lines proposed on a quote.
-- Mirrors CONTRACT_BENEFIT but for the pre-sale stage. BenefitID is a
-- nullable reference to a catalogue benefit; a quote may propose a
-- coverage that has no CONTRACT_BENEFIT row until conversion happens.
-- ---------------------------------------------------------------------
CREATE TABLE IF NOT EXISTS QUOTE_COVERAGE (
    QuoteCoverageID  BIGINT       GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    QuoteID          BIGINT       NOT NULL REFERENCES QUOTE (QuoteID) ON DELETE CASCADE,
    BenefitID        INTEGER      REFERENCES CONTRACT_BENEFIT (BenefitID),
    CoverageName     VARCHAR(100) NOT NULL,
    CoverageLimit    NUMERIC(14,2),
    Deductible       NUMERIC(14,2),
    ProposedPremium  NUMERIC(14,2),
    CreatedAt        TIMESTAMPTZ  NOT NULL DEFAULT now(),
    CONSTRAINT ck_quote_cov_amounts CHECK (
        (CoverageLimit   IS NULL OR CoverageLimit   >= 0) AND
        (Deductible      IS NULL OR Deductible      >= 0) AND
        (ProposedPremium IS NULL OR ProposedPremium >= 0))
);
COMMENT ON TABLE QUOTE_COVERAGE IS
    'Coverage lines proposed on a quote, with limit, deductible, and proposed premium.';

-- ---------------------------------------------------------------------
-- QUOTE_RISK_FACTOR - factors reviewed while rating a quote.
--
-- SourceType records where a factor came from. This is the audit control
-- that keeps regional public-health context separate from customer-
-- supplied information, so a reviewer can always tell which is which.
-- Allowed values are constrained; 'RegionalAggregate' rows may only
-- reference a GEOGRAPHIC_AREA, never a person.
-- ---------------------------------------------------------------------
CREATE TABLE IF NOT EXISTS QUOTE_RISK_FACTOR (
    QuoteRiskFactorID BIGINT       GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    QuoteID           BIGINT       NOT NULL REFERENCES QUOTE (QuoteID) ON DELETE CASCADE,
    RiskFactorType    VARCHAR(50)  NOT NULL,
    SourceType        VARCHAR(30)  NOT NULL,
    SourceReference   VARCHAR(200),
    FactorValue       VARCHAR(200),
    ReviewStatus      VARCHAR(20)  NOT NULL DEFAULT 'Pending',
    CreatedAt         TIMESTAMPTZ  NOT NULL DEFAULT now(),
    CONSTRAINT ck_qrf_source CHECK (SourceType IN
        ('CustomerDeclared','InternalRecord','RegionalAggregate','ProductRule')),
    CONSTRAINT ck_qrf_review CHECK (ReviewStatus IN ('Pending','Reviewed','Waived'))
);
COMMENT ON TABLE QUOTE_RISK_FACTOR IS
    'Risk factors considered on a quote. SourceType=RegionalAggregate refers to area-level public data only, never to an individual health record.';

-- ---------------------------------------------------------------------
-- QUOTE_STATUS_HISTORY - append-only state transition log.
-- Gives the workflow an audit trail: who changed what, when, and why.
-- ---------------------------------------------------------------------
CREATE TABLE IF NOT EXISTS QUOTE_STATUS_HISTORY (
    QuoteStatusHistoryID BIGINT      GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    QuoteID              BIGINT      NOT NULL REFERENCES QUOTE (QuoteID) ON DELETE CASCADE,
    PreviousStatus       VARCHAR(20),
    NewStatus            VARCHAR(20) NOT NULL,
    ChangedAt            TIMESTAMPTZ NOT NULL DEFAULT now(),
    ChangedBy            VARCHAR(100) NOT NULL,
    Reason               VARCHAR(300),
    CONSTRAINT ck_qsh_change CHECK (PreviousStatus IS NULL OR PreviousStatus <> NewStatus)
);
COMMENT ON TABLE QUOTE_STATUS_HISTORY IS
    'Append-only record of quote state transitions. Supports audit and cycle-time reporting.';

-- ---------------------------------------------------------------------
-- PAYMENT_AUTHORIZATION - required by use case 12.
--
-- Stores only an authorisation reference returned by a payment gateway.
-- No card number, no bank account, no cardholder data is stored. The
-- design deliberately keeps the database out of PCI scope.
-- ---------------------------------------------------------------------
CREATE TABLE IF NOT EXISTS PAYMENT_AUTHORIZATION (
    PaymentAuthorizationID BIGINT      GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    QuoteID                BIGINT      NOT NULL REFERENCES QUOTE (QuoteID) ON DELETE CASCADE,
    AuthorizationReference VARCHAR(100) NOT NULL,
    PaymentMethodType      VARCHAR(30)  NOT NULL,
    AuthorizedAmount       NUMERIC(14,2) NOT NULL,
    AuthorizationStatus    VARCHAR(20)  NOT NULL DEFAULT 'Pending',
    AuthorizedAt           TIMESTAMPTZ,
    CreatedAt              TIMESTAMPTZ  NOT NULL DEFAULT now(),
    CONSTRAINT uq_payment_auth_ref UNIQUE (AuthorizationReference),
    CONSTRAINT ck_pa_status CHECK (AuthorizationStatus IN ('Pending','Authorized','Declined','Voided')),
    CONSTRAINT ck_pa_method CHECK (PaymentMethodType IN ('Card','ACH','Invoice','Payroll')),
    CONSTRAINT ck_pa_amount CHECK (AuthorizedAmount >= 0)
);
COMMENT ON TABLE PAYMENT_AUTHORIZATION IS
    'Payment authorisation reference for an accepted quote. Stores no cardholder data by design.';

-- ---------------------------------------------------------------------
-- QUOTE_CONVERSION - the bridge from quote to issued contract.
--
-- One quote converts at most once: UNIQUE on QuoteID. This is the
-- database-level guarantee that a single quote cannot silently produce
-- two policies.
-- ---------------------------------------------------------------------
CREATE TABLE IF NOT EXISTS QUOTE_CONVERSION (
    QuoteConversionID BIGINT      GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    QuoteID           BIGINT      NOT NULL REFERENCES QUOTE (QuoteID),
    ContractID        INTEGER     NOT NULL REFERENCES CONTRACT (ContractID),
    ConvertedAt       TIMESTAMPTZ NOT NULL DEFAULT now(),
    ConversionStatus  VARCHAR(20) NOT NULL DEFAULT 'Completed',
    CONSTRAINT uq_quote_conversion_quote UNIQUE (QuoteID),
    CONSTRAINT ck_qc_status CHECK (ConversionStatus IN ('Completed','Reversed'))
);
COMMENT ON TABLE QUOTE_CONVERSION IS
    'Links an accepted quote to the CONTRACT created from it. UNIQUE(QuoteID) prevents double conversion.';

\echo 'Part III workflow extension created.'
